--- a/app/src/main/res/layout/activity_manage_budget.xml
+++ b/app/src/main/res/layout/activity_manage_budget.xml
@@ -9,7 +9,7 @@
     <View
         android:id="@+id/view3"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:background="@color/appPrimaryColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -17,88 +17,129 @@
     </View>
 
     <TextView
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Here you can manage your budget!"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="14sp"
+        android:textColor="@color/whiteTransparent"
+        android:textAlignment="center"
+        android:textStyle="italic"
+        android:layout_marginTop="5dp"/>
+
+
+    <TextView
+        android:id="@+id/month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/constraintLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="20dp"
         android:text="March 2020"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/line"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="30sp">
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="80dp">
 
 
     </TextView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="350dp"
-        android:layout_height="550dp"
-        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="110dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/white"
+        android:elevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:elevation="5dp"
-        android:layout_marginTop="100dp">
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:id="@+id/gobackrec"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="8dp"
+            android:clickable="true"
+            android:onClick="estimateDone"
+            android:text="&lt;Back "
+            android:textColor="@color/appPrimaryColor"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
             android:id="@+id/manageBudgetTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/add_new"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="25dp"
             android:text="Manage Budget"
             android:textColor="@color/appIcons"
-            android:textSize="30dp">
+            android:textSize="30dp"
+            app:layout_constraintBottom_toTopOf="@id/add_new"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         </TextView>
 
         <Button
             android:id="@+id/add_new"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="30dp"
             android:background="@drawable/auth_button_layout"
             android:text="Add New"
             android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/manageBudgetTV"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="15dp"
-/>
-
-        <Button
-            android:id="@+id/reset"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/auth_button_signup_layout"
-            android:text="Reset"
-            app:layout_constraintTop_toBottomOf="@id/manageBudgetTV"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="50dp"
-            android:layout_marginStart="15dp"
+            app:layout_constraintTop_toBottomOf="@id/manageBudgetTV" />
 
-       />
+        <TextView
+            android:id="@+id/NTS_Budget"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nothing to show yet..."
+            android:textAlignment="center"
+            android:textColor="@color/appPrimaryColor"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ProgressBar
             android:id="@+id/monthlyprogress"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:indeterminateTint="@color/appPrimaryColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:indeterminateTint="@color/appPrimaryColor"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/show_data"
             android:layout_width="match_parent"
             android:layout_height="355dp"
+            android:layout_marginBottom="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
