--- a/app/src/main/res/layout/layout_listitems_insights.xml
+++ b/app/src/main/res/layout/layout_listitems_insights.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout_insights"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="wrap_content"
     android:padding="3dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/recyclerviewedit"
@@ -20,7 +20,7 @@
         android:drawableTop="@drawable/baseline_toys_24"
         android:text="To be Paid to Hashim"
         android:textAlignment="center"
-        android:drawablePadding="4dp"
+        android:drawablePadding="3dp"
         android:drawableTint="@color/appPrimaryColor"
         android:textSize="14sp"
         android:textStyle="bold"
