--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -14,7 +14,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="52dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/logo2"
         app:civ_border_color="#3f51b5"
         app:civ_border_width="4dp"
         app:civ_shadow="true"
@@ -30,8 +30,8 @@
 
     <TextView
         android:id="@+id/Welcome"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Welcome"
         android:textAlignment="center"
         android:textColor="@color/appPrimaryColor"
