--- a/app/src/main/res/layout/add_record.xml
+++ b/app/src/main/res/layout/add_record.xml
@@ -26,6 +26,22 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         >
+
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="&lt;Back "
+            android:textColor="@color/appPrimaryColor"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="8dp"
+            android:clickable="true"
+
+            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -145,24 +161,6 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating2"
-        style="@style/Widget.MaterialComponents.FloatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:backgroundTint="@color/appPrimaryColor"
-        android:tint="@color/white"
-        app:srcCompat="@drawable/baseline_arrow_forward_24"
-        app:layout_constraintBottom_toBottomOf="@id/maincard"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/maincard"
-        app:fabCustomSize="@android:dimen/notification_large_icon_width"
-        />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
