--- a/app/src/main/res/layout/dialogue_box_loans.xml
+++ b/app/src/main/res/layout/dialogue_box_loans.xml
@@ -45,20 +45,39 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/done_loan_reminder"
         style="@style/Widget.MaterialComponents.FloatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginBottom="35dp"
         android:backgroundTint="@color/appPrimaryColor"
         android:tint="@color/white"
-        app:srcCompat="@drawable/baseline_done_24"
-        app:layout_constraintTop_toBottomOf="@id/date_loan"
+        app:fabCustomSize="35dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/date_loan"
+        app:layout_constraintVertical_bias="0.509"
+
+        app:srcCompat="@drawable/baseline_done_24" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/done_loan_reminderCancel"
+        style="@style/Widget.MaterialComponents.FloatingActionButton"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="115dp"
+        android:layout_marginBottom="35dp"
+        android:layout_marginStart="5dp"
+        android:backgroundTint="@color/appPrimaryColor"
+        android:tint="@color/white"
+        app:fabCustomSize="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="35dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-      />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/done_loan_reminder"
+        app:layout_constraintTop_toBottomOf="@id/date_loan"
+        app:layout_constraintVertical_bias="0.509"
+        app:srcCompat="@drawable/baseline_close_24" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
