--- a/app/src/main/res/layout/fragment_received.xml
+++ b/app/src/main/res/layout/fragment_received.xml
@@ -39,16 +39,17 @@
             android:id="@+id/done_rec"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Done "
+            android:text="&lt;Back "
             android:textColor="@color/appPrimaryColor"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginStart="8dp"
             android:clickable="true"
             />
+
 
 
         <TextView
@@ -60,7 +61,19 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="15dp"
             android:text="Manage Loans"
-            android:textSize="30dp"/>
+            android:textSize="24dp"/>
+
+        <TextView
+            android:id="@+id/clr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/manageBudgetTV"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="5dp"
+            android:text="Loading.."
+            android:textSize="20dp"/>
+
 
 
         <Button
@@ -70,14 +83,27 @@
             android:background="@drawable/auth_button_layout"
             android:text="Add New"
             android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/manageBudgetTV"
+            app:layout_constraintTop_toBottomOf="@id/clr"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="40dp"
             android:layout_marginStart="40dp"
             />
 
-
+        <TextView
+            android:id="@+id/NTS_LR"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text = "Nothing to show yet..."
+            android:textColor="@color/appPrimaryColor"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textAlignment="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"/>
         <ProgressBar
             android:id="@+id/monthlyprogress_fragrec"
             android:layout_width="50dp"
