--- a/app/src/main/res/layout/layout_listitems.xml
+++ b/app/src/main/res/layout/layout_listitems.xml
@@ -48,6 +48,7 @@
         android:layout_marginEnd="10dp"
         android:text="Change Amount"
         android:textSize="9sp"
+        android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
