--- a/app/src/main/res/layout/layout_listitems_loans_rec.xml
+++ b/app/src/main/res/layout/layout_listitems_loans_rec.xml
@@ -16,10 +16,13 @@
         android:layout_height="60dp"
         android:background="@drawable/setamountlayoutsave"
         android:textColor="@color/white"
+        android:src="@drawable/baseline_toys_24"
+        android:padding="17dp"
+        android:tint="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"/>
+        android:layout_marginStart="10dp"/>
 
     <TextView
         android:id="@+id/loan_rec_name"
