--- a/app/src/main/res/layout/layout_listitems_record.xml
+++ b/app/src/main/res/layout/layout_listitems_record.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout_record_keeping"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="90dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/recyclerviewedit"
     android:layout_marginTop="5dp"
@@ -14,12 +14,15 @@
         android:id="@+id/Image_All_Rec"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_marginStart="10dp"
         android:background="@drawable/setamountlayoutsave"
+        android:padding="17dp"
+        android:src="@drawable/baseline_toys_24"
         android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/all_rec_des"
