--- a/app/src/main/res/layout/layout_listitems_savings.xml
+++ b/app/src/main/res/layout/layout_listitems_savings.xml
@@ -56,6 +56,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerVertical="true"
+        android:src="@drawable/baseline_toys_24"
+        android:padding="17dp"
+        android:tint="@color/white"
         android:layout_marginStart="9dp"
         android:layout_marginTop="9dp"
         android:background="@drawable/setamountlayoutsave"
