--- a/app/src/main/res/layout/menu_fragment.xml
+++ b/app/src/main/res/layout/menu_fragment.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/view3"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="200dp"
         android:background="@color/appPrimaryColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,35 +20,60 @@
 
     </View>
 
-
     <TextView
+        android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="Menu"
+        android:layout_marginTop="15dp"
+        android:text="My Dashboard"
+        android:layout_marginStart="10dp"
         android:textColor="@color/white"
-        android:textSize="42sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="22sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name" />
+
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Loading"
+        android:textStyle="italic"
+        android:layout_marginStart="10dp"
+        android:textColor="@color/white"
+        android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/current_balance_m"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Loading"
+        android:layout_marginStart="10dp"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/menu" />
 
     <ImageButton
         android:id="@+id/record_diary_button"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="290dp"
         android:layout_marginEnd="200dp"
+        android:background="@color/appgrey"
         android:src="@drawable/record"
-        android:background="@color/appgrey"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/menu"
+        android:layout_marginTop="50dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your Record Diary"
+        android:text="My Record Diary"
         android:textColor="@color/appPrimaryColor"
         app:layout_constraintTop_toTopOf="@+id/record_diary_button"
         app:layout_constraintBottom_toBottomOf="@id/record_diary_button"
@@ -60,19 +85,18 @@
         android:id="@+id/monthly_budget_button"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="290dp"
         android:layout_marginStart="200dp"
+        android:background="@color/appgrey"
         android:src="@drawable/monthly"
-        android:background="@color/appgrey"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/menu"
+        android:layout_marginTop="50dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your Monthly Budget"
+        android:text="My Budget"
         android:textColor="@color/appPrimaryColor"
         app:layout_constraintTop_toTopOf="@+id/monthly_budget_button"
         app:layout_constraintBottom_toBottomOf="@id/monthly_budget_button"
@@ -99,7 +123,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your Savings"
+        android:text="My Savings"
         android:textColor="@color/appPrimaryColor"
         app:layout_constraintTop_toTopOf="@+id/savings_button"
         app:layout_constraintBottom_toBottomOf="@id/savings_button"
@@ -122,7 +146,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your Loans"
+        android:text="My Loans"
         android:textColor="@color/appPrimaryColor"
         app:layout_constraintTop_toTopOf="@+id/loans_button"
         app:layout_constraintBottom_toBottomOf="@id/loans_button"
@@ -148,7 +172,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your Wallet"
+        android:text="My Wallet"
         android:textColor="@color/appPrimaryColor"
         app:layout_constraintTop_toTopOf="@+id/wallet_button"
         app:layout_constraintBottom_toBottomOf="@id/wallet_button"
