--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/view3"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="100dp"
         android:background="@color/appPrimaryColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -18,9 +18,10 @@
     </View>
 
     <TextView
+        android:id="@+id/settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="5dp"
         android:text="Settings"
         android:textColor="@color/white"
         android:textSize="42sp"
@@ -32,14 +33,13 @@
         android:id="@+id/profile_button"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="290dp"
         android:layout_marginEnd="200dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/appgrey"
         android:src="@drawable/ic_icons8_settings"
-        android:background="@color/appgrey"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/settings" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -53,21 +53,17 @@
         android:layout_marginTop="90dp" />
 
 
-
-
-
     <ImageButton
         android:id="@+id/logout_button"
         android:layout_width="130dp"
         android:layout_height="130dp"
+        android:layout_marginTop="50dp"
         android:layout_marginStart="200dp"
-        android:layout_marginBottom="290dp"
+        android:background="@color/appgrey"
+        android:src="@drawable/ic_logout_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_logout_img"
-        android:background="@color/appgrey" />
+        app:layout_constraintTop_toBottomOf="@id/settings" />
 
     <TextView
         android:layout_width="wrap_content"
